--- a/TechJobsPersistent/Views/Home/AddJob.cshtml
+++ b/TechJobsPersistent/Views/Home/AddJob.cshtml
@@ -1,12 +1,22 @@
-﻿<h1>Add a Job</h1>
+﻿@using TechJobsPersistent.ViewModels;
+@model AddJobViewModel;
+
+<h1>Add a Job</h1>
 
 <form asp-controller="Home" asp-action="ProcessAddJobForm" method="post">
     <div class="form-group">
-        <label>Name</label>
-        <input class="form-control" />
+        <label asp-for="Name">Name</label>
+        <input asp-for="Name" class="form-control" />
         <span></span>
     </div>
+    <div class="form-group">
+        <label asp-for="EmployerId">EmployerId</label>
+        <select asp-for="EmployerId" asp-items="Model.Employers"></select>
+        <span></span>
+        <p><a asp-controller="Employer" asp-action="Add">Add Employer</a></p> <! -- creates the link -->
+    </div>
+    <div class="form-group">
 
-    <input type="submit" value="Add Job" />
+        <input type="submit" value="Add Job" />
 </form>
 
