--- a/TechJobsPersistent/Views/Home/AddJob.cshtml
+++ b/TechJobsPersistent/Views/Home/AddJob.cshtml
@@ -6,18 +6,24 @@
 <form asp-controller="Home" asp-action="ProcessAddJobForm" method="post">
     <div class="form-group">
         <label asp-for="Name">Name</label>
-        <input asp-for="Name" class="form-control" />
-        <span></span>
+        <input asp-for="Name" />
+        <span asp-validation-for="Name"></span>
     </div>
     <div class="form-group">
-        <label asp-for="EmployerId">EmployerId</label>
+        <label asp-for="EmployerId">Employer</label>
         <select asp-for="EmployerId" asp-items="Model.Employers"></select>
-        <span></span>
-        <p><a asp-controller="Employer" asp-action="Add">Add Employer</a></p> <! -- creates the link -->
     </div>
+    <p><a asp-controller="Employer" asp-action="Add">Add Employer</a></p>
+    <p></p>
     <div class="form-group">
-
-        <input type="submit" value="Add Job" />
-        </div>
+        @foreach (Skill skill in Model.Skills)
+        {
+            <input type="checkbox" name="selectedSkills" value="@skill.Id" />
+            <label asp-for="@skill.Name">@skill.Name</label>
+        }
+    </div>
+    <a asp-controller="Skill" asp-action="Add">Add Skill</a>
+    <p></p>
+    <input type="submit" value="Add Job" />
 </form>
 
