--- a/TechJobsPersistent/Views/Employer/Add.cshtml
+++ b/TechJobsPersistent/Views/Employer/Add.cshtml
@@ -3,8 +3,8 @@
 
 <h1>Add New Employer</h1>
 
-<form asp-controller="Employer" asp-action="ProcessAddEmployerForm" method="post">
-    <div asp-controller="Employers" asp-action="Add"class="form-group">
+<form asp-controller="Employer" asp-action="Add" method="post">
+    <div class="form-group">
         <label asp-for="Name">Employer Name</label>
         <input asp-for="Name"/>
         <span asp-validation-for="Name"></span>
@@ -13,7 +13,6 @@
         <label asp-for="Location">Employer Location</label>
         <input asp-for="Location" />
         <span asp-validation-for="Location"></span>
-
     </div>
     <input type="submit" value="Submit" />
 </form>
